JumpScript/tests/baselines/reference/TupleType5.errors.txt
tests/cases/conformance/parser/ecmascript5/TupleTypes/TupleType5.jump(1,15): error TS1009: Trailing comma not allowed.


==== tests/cases/conformance/parser/ecmascript5/TupleTypes/TupleType5.jump (1 errors) ====
    var v: [number,]
                  ~
!!! error TS1009: Trailing comma not allowed.